# swn-gm-tool

./: .gitignore  CMakeLists.txt  Readme.md  conf.json  driver.cpp  main.cpp
Config/: DefaultAssets.json  DefaultConfig.json
Configuration/: CMakeLists.txt
Configuration/include/: Config.hpp  ConfigManager.hpp
Configuration/src/: ConfigManager.cpp
ControlLayer/: CMakeLists.txt
ControlLayer/include/: FactionManager.hpp
ControlLayer/src/: AssetManager.cpp
DTO/: CMakeLists.txt
DTO/include/: AssetDTO.hpp  DiceRoll.hpp  FactionDTO.hpp
DTO/src/: DiceRoll.cpp
DataAccess/: CMakeLists.txt
DataAccess/include/: DataAccess.hpp  FileAccess.hpp
DataAccess/src/: DataAccess.cpp
DiceRoll/: CMakeLists.txt
DiceRoll/include/: DiceRoll.hpp
DiceRoll/src/: DiceRoll.cpp
Driver/: CMakeLists.txt
Driver/include/: Driver.hpp  MenuOptionFactory.hpp  MenuOptions.hpp
Driver/src/: Driver.cpp
FactionControl/: CMakeLists.txt
FactionControl/include/: Asset.hpp  AssetManager.hpp  DiceRoll.hpp  Faction.hpp  FactionAssetMap.hpp  FactionControl.hpp  FactionManager.hpp  Manager.hpp  World.hpp
FactionControl/src/: FactionAssetMap.cpp  FactionControl.cpp  FactionManager.cpp
FactionTurn/: CMakeLists.txt
FactionTurn/include/: Actions.hpp  Asset.hpp  Events.hpp  Faction.hpp  FactionCreateModel.hpp  FactionModel.hpp  FactionTurn.hpp  Observer.hpp  Subject.hpp
FactionTurn/src/: Asset.cpp  Faction.cpp  FactionTurn.cpp  Subject.cpp
FactionTurn/tests/: CMakeLists.txt  FactionTests.cpp
HexGrid/: CMakeLists.txt
HexGrid/include/: Hex.hpp  HexMap.hpp  Map.hpp
HexGrid/src/: Hex.cpp  HexMap.cpp  Map.cpp
Models/include/: AssetModel.hpp  ConfigModel.hpp  DiceRollModel.hpp  FactionCreateModel.hpp  FactionModel.hpp
SGT/: CMakeLists.txt
SGT/include/: Driver.hpp  MenuOptions.hpp  SGTMain.hpp  SGTMenuOptions.hpp
SGT/src/: Driver.cpp  FactionManager.cpp  SGTMain.cpp
SectorGen/: CMakeLists.txt
SectorGen/include/: Hex.hpp  HexElement.hpp  Map.hpp  MapGen.hpp  Planet.hpp  PlanetInfo.hpp  PlanetTags.hpp  SectorGen.hpp  SwnHex.hpp
SectorGen/src/: SectorGen.cpp
SwnGmToolAPI/: CMakeLists.txt
SwnGmToolAPI/include/: SwnGmToolAPI.hpp
SwnGmToolAPI/src/: SwnGmToolAPI.cpp
Tests/: CMakeLists.txt
Tests/include/: FactionControl_Tests.hpp  SectorGen_Tests.hpp  TestHelpers.hpp  Tests.hpp
Tests/src/: FactionAssetMapTests.cpp  FactionControlTests.cpp  FactionTests.cpp  FactionTurnTests.cpp  SectorGenTests.cpp  SwnGmToolAPITests.cpp  TestHelpers.cpp  Tests.cpp
Utils/: CMakeLists.txt
Utils/include/: AssetCreator.hpp  Random.hpp
Utils/src/: AssetCreator.cpp
cmake/Modules/: FindCatch.cmake
include/: FactionManager.hpp  SGTMain.hpp  SGTMenuOptions.hpp
src/: FactionManager.cpp  SGTMain.cpp
